--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,15 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 
-        classpath 'com.novoda:bintray-release:0.3.4'
+        classpath 'com.novoda:bintray-release:0.5.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,15 +22,16 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        google()
     }
 
 }
 //tasks.getByPath("pixelsdk:mavenAndroidJavadocs").enabled = false
-tasks.withType(Javadoc) {
-    options.addStringOption('Xdoclint:none', '-quiet')
-    options.addStringOption('encoding', 'UTF-8')
-}
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-tasks.getByPath(":library:mavenAndroidJavadocs").enabled = false
+//tasks.withType(Javadoc) {
+//    options.addStringOption('Xdoclint:none', '-quiet')
+//    options.addStringOption('encoding', 'UTF-8')
+//}
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
+//tasks.getByPath(":library:mavenAndroidJavadocs").enabled = false
